--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">Tetris</string>
     <string name="game_over">Game over!</string>
-    <string name="initial_level">Level: 0</string>
-    <string name="initial_score">Score: 0</string>
-    <string name="initial_lines">Lines: 0</string>
+    <string name="level">Level: %d</string>
+    <string name="score">Score: %d</string>
+    <string name="lines">Lines: %d</string>
     <string name="current_high_score">Current high score:\n%d</string>
     <string name="quit_button">Exit</string>
     <string name="statistics_button">Statistics</string>
     <string name="start_button">Play</string>
     <string name="new_high_score">That\'s your new personal best!</string>
+    <string name="final_score">\"Your score: %d\"</string>
 </resources>
