--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="statistics_button">Statistics</string>
     <string name="start_button">Play</string>
     <string name="new_high_score">That\'s your new personal best!</string>
-    <string name="final_score">\"Your score: %d\"</string>
+    <string name="final_score">Final score: %d</string>
+    <string name="reset_score">Reset score</string>
+    <string name="description_background">Tetris game screenshot (background)</string>
 </resources>
