--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,15 +1,19 @@
 <resources>
     <string name="app_name">Tetris</string>
     <string name="game_over">Game over!</string>
-    <string name="level">Level: %d</string>
-    <string name="score">Score: %d</string>
-    <string name="lines">Lines: %d</string>
-    <string name="current_high_score">Current high score:\n%d</string>
+    <string name="level">Level: </string>
+    <string name="score">Score: </string>
+    <string name="lines">Lines: </string>
+    <string name="current_high_score">Current high score:\n</string>
     <string name="quit_button">Exit</string>
     <string name="statistics_button">Statistics</string>
     <string name="start_button">Play</string>
     <string name="new_high_score">That\'s your new personal best!</string>
-    <string name="final_score">Final score: %d</string>
+    <string name="final_score">Final score:</string>
     <string name="reset_score">Reset score</string>
     <string name="description_background">Tetris game screenshot (background)</string>
+    <string name="rotate_left_desc">Counter clock wise arrow</string>
+    <string name="rotate_right_arrow">Clock wise arrow</string>
+    <string name="iv_next_piece_desc">Next tetromino</string>
+    <string name="paused">Paused</string>
 </resources>
