Added personal scores fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,9 @@
     <string name="desc_retry">Play again</string>
     <string name="desc_leave">To the main menu</string>
 
-    <string name="share_subject">Check out my latest score on Brick Shit House™</string>
-    <string name="share_text">I\'ve got a new score of %d on Brick Shit House™\n Can you do better than me?\n\nDownload the app at https://github.com/MichaelRayven/TetrisApp/releases/latest</string>
+    <string name="share_subject">Check out my latest score on MichaelRayven\'s Tetris</string>
+    <string name="share_text">I\'ve got a new score of %d on MichaelRayven\'s Tetris\n Can you do better than me?\n\nDownload the app at https://github.com/MichaelRayven/TetrisApp/releases/latest</string>
     <string name="share_using">Share using</string>
+    <string name="game_over">Game over!</string>
+    <string name="personal_scores">Personal Scores</string>
 </resources>
