--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="settings">Settings</string>
     <string name="next">Next:</string>
     <string name="desc_exit">Exit app</string>
-    <string name="sign_in"><u>Sign in</u></string>
+    <string name="sign_in_underlined"><u>Sign in</u></string>
     <string name="desc_leaderboard">Show leaderboard</string>
     <string name="desc_profile">Account circle</string>
     <string name="hold">Hold:</string>
@@ -54,4 +54,9 @@
     <string name="share_using">Share using</string>
     <string name="game_over">Game over!</string>
     <string name="personal_scores">Personal Scores</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sign_in_google">Sign-in with Google</string>
+    <string name="register_account">Don\'t have an account?</string>
+    <string name="sign_in">Sign-in</string>
 </resources>
