--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,9 +56,14 @@
     <string name="game_over">Game over!</string>
     <string name="personal_scores">Personal Scores</string>
 
-    <string name="sign_in_google">Sign-in with Google</string>
-    <string name="register_account">Don\'t have an account?</string>
-    <string name="login_account">Already have an account?</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="email">Email</string>
+    <string name="username">Username</string>
     <string name="sign_in">Sign-in</string>
     <string name="sign_up">Sign-up</string>
+    <string name="sign_in_google">Sign-in with Google</string>
+    <string name="sign_up_google">Sign-up with Google</string>
+    <string name="switch_to_sign_up">Don\'t have an account?</string>
+    <string name="switch_to_sign_in">Already have an account?</string>
 </resources>
