--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,15 +5,15 @@
     <string name="multiplayer">Multiplayer</string>
     <string name="settings">Settings</string>
     <string name="next">Next:</string>
-    <string name="desc_exit">Exit app</string>
-    <string name="sign_in_underlined"><u>Sign in</u></string>
-    <string name="desc_leaderboard">Show leaderboard</string>
-    <string name="desc_profile">Account circle</string>
     <string name="hold">Hold:</string>
     <string name="score">Score:</string>
     <string name="lines">Lines:</string>
     <string name="level">Level:</string>
     <string name="combo">Combo:</string>
+
+    <string name="desc_exit">Exit app</string>
+    <string name="desc_leaderboard">Show leaderboard</string>
+    <string name="desc_profile">Account circle</string>
     <string name="desc_left">Move left</string>
     <string name="desc_right">Move right</string>
     <string name="desc_down">Drop tetromino</string>
@@ -21,14 +21,19 @@
     <string name="desc_rotate_left">Rotate left</string>
     <string name="desc_pause">Pause</string>
     <string name="desc_resume">Resume</string>
+    <string name="desc_back">Go to previous screen</string>
+    <string name="desc_menu">Exit to menu</string>
+    <string name="desc_share">Share score</string>
+    <string name="desc_retry">Play again</string>
+    <string name="desc_leave">To the main menu</string>
+    <string name="desc_update_feature">Update feature depiction</string>
+    <string name="desc_download_notification">Downloading…</string>
+
     <string name="pause_text">Paused</string>
 
     <string name="current_high_score">Current high score:\n%d</string>
     <string name="new_high_score">New high score:\n%d</string>
 
-    <string name="update_url" translatable="false">https://tetris-app-backend.vercel.app/api/</string>
-
-    <string name="desc_download_notification">Downloading…</string>
     <string name="update_feature_title">Want to stay up to date?</string>
     <string name="update_feature_description">The auto update feature allows you to update the app with just a click of a button.</string>
     <string name="update_feature_supporting">Want to try it out?</string>
@@ -36,7 +41,6 @@
     <string name="update_feature_decline">No, thanks</string>
     <string name="update_feature_unavailable">Auto-update feature will be disabled.</string>
     <string name="update_feature_retry">Enable</string>
-    <string name="desc_update_feature">Update feature depiction</string>
 
     <string name="exit_dialog_title">Exit the game?</string>
     <string name="exit_dialog_description">All current progress will be lost!</string>
@@ -45,10 +49,6 @@
     <string name="agree">Yes</string>
     <string name="disagree">No</string>
     <string name="cancel">Cancel</string>
-    <string name="desc_menu">Exit to menu</string>
-    <string name="desc_share">Share score</string>
-    <string name="desc_retry">Play again</string>
-    <string name="desc_leave">To the main menu</string>
 
     <string name="share_subject">Check out my latest score on MichaelRayven\'s Tetris</string>
     <string name="share_text">I\'ve got a new score of %d on MichaelRayven\'s Tetris\n Can you do better than me?\n\nDownload the app at https://github.com/MichaelRayven/TetrisApp/releases/latest</string>
@@ -60,10 +60,14 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="email">Email</string>
     <string name="username">Username</string>
+    <string name="sign_out">Sign Out</string>
     <string name="sign_in">Sign-in</string>
     <string name="sign_up">Sign-up</string>
     <string name="sign_in_google">Sign-in with Google</string>
     <string name="sign_up_google">Sign-up with Google</string>
+    <string name="sign_in_underlined"><u>Sign in</u></string>
     <string name="switch_to_sign_up">Don\'t have an account?</string>
     <string name="switch_to_sign_in">Already have an account?</string>
+
+    <string name="update_url" translatable="false">https://tetris-app-backend.vercel.app/api/</string>
 </resources>
