--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="disagree">No</string>
     <string name="cancel">Cancel</string>
 
+    <string name="share_invite_code_subject">MichaelRayven\'s Tetris lobby invitation</string>
     <string name="share_subject">Check out my latest score on MichaelRayven\'s Tetris</string>
     <string name="share_text">I\'ve got a new score of %d on MichaelRayven\'s Tetris\n Can you do better than me?\n\nDownload the app at https://github.com/MichaelRayven/TetrisApp/releases/latest</string>
     <string name="share_using">Share using</string>
@@ -73,8 +74,15 @@
     <string name="update_url" translatable="false">https://gleaming-toad-gaiters.cyclic.app/api/</string>
     <string name="github_url" translatable="false">https://github.com/MichaelRayven/TetrisApp</string>
 
+    <string name="setting_auto_update_title">Auto-Update</string>
+    <string name="setting_countdown_title">Countdown</string>
+    <string name="setting_music_volume_title">Music Volume</string>
+    <string name="setting_sfx_volume_title">Sounds Volume</string>
+
     <string name="setting_auto_update" translatable="false">auto_update_enabled</string>
     <string name="setting_countdown" translatable="false">countdown_duration</string>
+    <string name="setting_music_volume" translatable="false">music_volume</string>
+    <string name="setting_sfx_volume" translatable="false">sfx_volume</string>
 
     <string name="invite_code">Invite Code</string>
     <string name="join_lobby">Join Lobby</string>
@@ -88,4 +96,5 @@
     <string name="player_limit">Player Limit:</string>
     <string name="enable_pause">Enable pause:</string>
     <string name="reset_settings">Reset Settings</string>
+    <string name="players">Players:</string>
 </resources>
