--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -110,4 +110,5 @@
     <string name="share">Поделиться</string>
     <string name="your_lobby">Ваша комната</string>
     <string name="users_lobby">Комната %s</string>
+    <string name="version">Версия: %s</string>
 </resources>
