--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,4 +177,5 @@
     <string name="share">Share</string>
     <string name="your_lobby">Your lobby</string>
     <string name="users_lobby">%s\'s lobby</string>
+    <string name="version">Version: %s</string>
 </resources>
